# Mini-C-IDE

./: CMakeLists.txt  README.md  hello.c
examples/: fib.c  hello_gl.c
src/: main.cpp
